_generated-doc/3.2/config/quarkus-redis-config-group-client-config-net-config.adoc

:summaryTableId: quarkus-redis-config-group-client-config-net-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-redis-config-group-client-config-net-config_configuration]]link:#quarkus-redis-config-group-client-config-net-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.alpn]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.alpn[quarkus.redis.tcp.alpn]`


[.description]
--
Set the ALPN usage.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_ALPN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_ALPN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.application-layer-protocols]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.application-layer-protocols[quarkus.redis.tcp.application-layer-protocols]`


[.description]
--
Sets the list of application-layer protocols to provide to the server during the `Application-Layer Protocol Negotiation`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_APPLICATION_LAYER_PROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_APPLICATION_LAYER_PROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.secure-transport-protocols]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.secure-transport-protocols[quarkus.redis.tcp.secure-transport-protocols]`


[.description]
--
Sets the list of enabled SSL/TLS protocols.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_SECURE_TRANSPORT_PROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_SECURE_TRANSPORT_PROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.idle-timeout]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.idle-timeout[quarkus.redis.tcp.idle-timeout]`


[.description]
--
Set the idle timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.connection-timeout]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.connection-timeout[quarkus.redis.tcp.connection-timeout]`


[.description]
--
Set the connect timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_CONNECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_CONNECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.non-proxy-hosts]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.non-proxy-hosts[quarkus.redis.tcp.non-proxy-hosts]`


[.description]
--
Set a list of remote hosts that are not proxied when the client is configured to use a proxy.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_NON_PROXY_HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_NON_PROXY_HOSTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.read-idle-timeout]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.read-idle-timeout[quarkus.redis.tcp.read-idle-timeout]`


[.description]
--
Set the read idle timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_READ_IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_READ_IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.receive-buffer-size]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.receive-buffer-size[quarkus.redis.tcp.receive-buffer-size]`


[.description]
--
Set the TCP receive buffer size.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_RECEIVE_BUFFER_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_RECEIVE_BUFFER_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.reconnect-attempts]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.reconnect-attempts[quarkus.redis.tcp.reconnect-attempts]`


[.description]
--
Set the value of reconnect attempts.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_RECONNECT_ATTEMPTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_RECONNECT_ATTEMPTS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.reconnect-interval]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.reconnect-interval[quarkus.redis.tcp.reconnect-interval]`


[.description]
--
Set the reconnect interval.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_RECONNECT_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_RECONNECT_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.reuse-address]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.reuse-address[quarkus.redis.tcp.reuse-address]`


[.description]
--
Whether to reuse the address.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_REUSE_ADDRESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_REUSE_ADDRESS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.reuse-port]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.reuse-port[quarkus.redis.tcp.reuse-port]`


[.description]
--
Whether to reuse the port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_REUSE_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_REUSE_PORT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.send-buffer-size]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.send-buffer-size[quarkus.redis.tcp.send-buffer-size]`


[.description]
--
Set the TCP send buffer size.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_SEND_BUFFER_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_SEND_BUFFER_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.so-linger]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.so-linger[quarkus.redis.tcp.so-linger]`


[.description]
--
Set the `SO_linger` keep alive duration.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_SO_LINGER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_SO_LINGER+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.cork]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.cork[quarkus.redis.tcp.cork]`


[.description]
--
Enable the `TCP_CORK` option - only with linux native transport.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_CORK+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_CORK+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.fast-open]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.fast-open[quarkus.redis.tcp.fast-open]`


[.description]
--
Enable the `TCP_FASTOPEN` option - only with linux native transport.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_FAST_OPEN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_FAST_OPEN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.keep-alive]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.keep-alive[quarkus.redis.tcp.keep-alive]`


[.description]
--
Set whether keep alive is enabled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_KEEP_ALIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_KEEP_ALIVE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.no-delay]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.no-delay[quarkus.redis.tcp.no-delay]`


[.description]
--
Set whether no delay is enabled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_NO_DELAY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_NO_DELAY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.quick-ack]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.quick-ack[quarkus.redis.tcp.quick-ack]`


[.description]
--
Enable the `TCP_QUICKACK` option - only with linux native transport.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_QUICK_ACK+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_QUICK_ACK+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.traffic-class]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.traffic-class[quarkus.redis.tcp.traffic-class]`


[.description]
--
Set the value of traffic class.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_TRAFFIC_CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_TRAFFIC_CLASS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.write-idle-timeout]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.write-idle-timeout[quarkus.redis.tcp.write-idle-timeout]`


[.description]
--
Set the write idle timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_WRITE_IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_WRITE_IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.local-address]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.local-address[quarkus.redis.tcp.local-address]`


[.description]
--
Set the local interface to bind for network connections. When the local address is null, it will pick any local address, the default local address is null.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_LOCAL_ADDRESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_LOCAL_ADDRESS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.alpn]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.alpn[quarkus.redis."redis-client-name".tcp.alpn]`


[.description]
--
Set the ALPN usage.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_ALPN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_ALPN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.application-layer-protocols]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.application-layer-protocols[quarkus.redis."redis-client-name".tcp.application-layer-protocols]`


[.description]
--
Sets the list of application-layer protocols to provide to the server during the `Application-Layer Protocol Negotiation`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_APPLICATION_LAYER_PROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_APPLICATION_LAYER_PROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.secure-transport-protocols]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.secure-transport-protocols[quarkus.redis."redis-client-name".tcp.secure-transport-protocols]`


[.description]
--
Sets the list of enabled SSL/TLS protocols.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_SECURE_TRANSPORT_PROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_SECURE_TRANSPORT_PROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.idle-timeout]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.idle-timeout[quarkus.redis."redis-client-name".tcp.idle-timeout]`


[.description]
--
Set the idle timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.connection-timeout]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.connection-timeout[quarkus.redis."redis-client-name".tcp.connection-timeout]`


[.description]
--
Set the connect timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_CONNECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_CONNECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.non-proxy-hosts]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.non-proxy-hosts[quarkus.redis."redis-client-name".tcp.non-proxy-hosts]`


[.description]
--
Set a list of remote hosts that are not proxied when the client is configured to use a proxy.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_NON_PROXY_HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_NON_PROXY_HOSTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.read-idle-timeout]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.read-idle-timeout[quarkus.redis."redis-client-name".tcp.read-idle-timeout]`


[.description]
--
Set the read idle timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_READ_IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_READ_IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.receive-buffer-size]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.receive-buffer-size[quarkus.redis."redis-client-name".tcp.receive-buffer-size]`


[.description]
--
Set the TCP receive buffer size.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_RECEIVE_BUFFER_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_RECEIVE_BUFFER_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.reconnect-attempts]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.reconnect-attempts[quarkus.redis."redis-client-name".tcp.reconnect-attempts]`


[.description]
--
Set the value of reconnect attempts.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_RECONNECT_ATTEMPTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_RECONNECT_ATTEMPTS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.reconnect-interval]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.reconnect-interval[quarkus.redis."redis-client-name".tcp.reconnect-interval]`


[.description]
--
Set the reconnect interval.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_RECONNECT_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_RECONNECT_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.reuse-address]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.reuse-address[quarkus.redis."redis-client-name".tcp.reuse-address]`


[.description]
--
Whether to reuse the address.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_REUSE_ADDRESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_REUSE_ADDRESS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.reuse-port]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.reuse-port[quarkus.redis."redis-client-name".tcp.reuse-port]`


[.description]
--
Whether to reuse the port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_REUSE_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_REUSE_PORT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.send-buffer-size]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.send-buffer-size[quarkus.redis."redis-client-name".tcp.send-buffer-size]`


[.description]
--
Set the TCP send buffer size.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_SEND_BUFFER_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_SEND_BUFFER_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.so-linger]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.so-linger[quarkus.redis."redis-client-name".tcp.so-linger]`


[.description]
--
Set the `SO_linger` keep alive duration.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_SO_LINGER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_SO_LINGER+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.cork]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.cork[quarkus.redis."redis-client-name".tcp.cork]`


[.description]
--
Enable the `TCP_CORK` option - only with linux native transport.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_CORK+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_CORK+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.fast-open]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.fast-open[quarkus.redis."redis-client-name".tcp.fast-open]`


[.description]
--
Enable the `TCP_FASTOPEN` option - only with linux native transport.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_FAST_OPEN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_FAST_OPEN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.keep-alive]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.keep-alive[quarkus.redis."redis-client-name".tcp.keep-alive]`


[.description]
--
Set whether keep alive is enabled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_KEEP_ALIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_KEEP_ALIVE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.no-delay]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.no-delay[quarkus.redis."redis-client-name".tcp.no-delay]`


[.description]
--
Set whether no delay is enabled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_NO_DELAY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_NO_DELAY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.quick-ack]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.quick-ack[quarkus.redis."redis-client-name".tcp.quick-ack]`


[.description]
--
Enable the `TCP_QUICKACK` option - only with linux native transport.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_QUICK_ACK+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_QUICK_ACK+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.traffic-class]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.traffic-class[quarkus.redis."redis-client-name".tcp.traffic-class]`


[.description]
--
Set the value of traffic class.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_TRAFFIC_CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_TRAFFIC_CLASS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.write-idle-timeout]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.write-idle-timeout[quarkus.redis."redis-client-name".tcp.write-idle-timeout]`


[.description]
--
Set the write idle timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_WRITE_IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_WRITE_IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.local-address]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.local-address[quarkus.redis."redis-client-name".tcp.local-address]`


[.description]
--
Set the local interface to bind for network connections. When the local address is null, it will pick any local address, the default local address is null.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_LOCAL_ADDRESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_LOCAL_ADDRESS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


h|[[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.proxy-options-set-proxy-options-for-connections-via-connect-proxy]]link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.proxy-options-set-proxy-options-for-connections-via-connect-proxy[Set proxy options for connections via CONNECT proxy]
This configuration section is optional
h|Type
h|Default

a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.proxy-options.username]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.proxy-options.username[quarkus.redis.tcp.proxy-options.username]`


[.description]
--
Set proxy username.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.proxy-options.password]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.proxy-options.password[quarkus.redis.tcp.proxy-options.password]`


[.description]
--
Set proxy password.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.proxy-options.port]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.proxy-options.port[quarkus.redis.tcp.proxy-options.port]`


[.description]
--
Set proxy port. Defaults to 3128.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`3128`


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.proxy-options.host]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.proxy-options.host[quarkus.redis.tcp.proxy-options.host]`


[.description]
--
Set proxy host.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.proxy-options.type]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.tcp.proxy-options.type[quarkus.redis.tcp.proxy-options.type]`


[.description]
--
Set proxy type. Accepted values are: `HTTP` (default), `SOCKS4` and `SOCKS5`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`http`, `socks4`, `socks5` 
|`http`


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.username]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.username[quarkus.redis."redis-client-name".tcp.proxy-options.username]`


[.description]
--
Set proxy username.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.password]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.password[quarkus.redis."redis-client-name".tcp.proxy-options.password]`


[.description]
--
Set proxy password.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.port]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.port[quarkus.redis."redis-client-name".tcp.proxy-options.port]`


[.description]
--
Set proxy port. Defaults to 3128.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`3128`


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.host]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.host[quarkus.redis."redis-client-name".tcp.proxy-options.host]`


[.description]
--
Set proxy host.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.type]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.type[quarkus.redis."redis-client-name".tcp.proxy-options.type]`


[.description]
--
Set proxy type. Accepted values are: `HTTP` (default), `SOCKS4` and `SOCKS5`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`http`, `socks4`, `socks5` 
|`http`


h|[[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options-set-proxy-options-for-connections-via-connect-proxy]]link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options-set-proxy-options-for-connections-via-connect-proxy[Set proxy options for connections via CONNECT proxy]
This configuration section is optional
h|Type
h|Default

a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.username]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.username[quarkus.redis."redis-client-name".tcp.proxy-options.username]`


[.description]
--
Set proxy username.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.password]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.password[quarkus.redis."redis-client-name".tcp.proxy-options.password]`


[.description]
--
Set proxy password.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.port]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.port[quarkus.redis."redis-client-name".tcp.proxy-options.port]`


[.description]
--
Set proxy port. Defaults to 3128.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`3128`


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.host]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.host[quarkus.redis."redis-client-name".tcp.proxy-options.host]`


[.description]
--
Set proxy host.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.type]]`link:#quarkus-redis-config-group-client-config-net-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.type[quarkus.redis."redis-client-name".tcp.proxy-options.type]`


[.description]
--
Set proxy type. Accepted values are: `HTTP` (default), `SOCKS4` and `SOCKS5`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`http`, `socks4`, `socks5` 
|`http`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
